--- a/menu.html
+++ b/menu.html
@@ -13,6 +13,14 @@
     <meta name="twitter:card" content="summary_large_image">
 
     <title>Меню на тиждень</title>
+    <body>
+        <p>
+         <a href="https://solopovdmitriy.github.io/DietForWeek/"><img src="image/menu.png" alt="Дієта"></a>
+        </p>
+       </body>
+ </head>
+ 
+</html>
     <style>
         body {
             font-family: Arial, sans-serif;
