--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
+   
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Меню на тиждень</title>
+    <meta property="og:title" content="Молочно-рослинна дієта: Меню на тиждень">
+    <meta property="og:description" content="Детальне меню на тиждень із вказанням порцій, ваги продуктів і загального списку для закупівлі. Збалансоване харчування для вашого здоров'я.">
+    <meta property="og:image" content="https://kor.ill.in.ua/m/1260x900/675790.jpg">
+    <meta property="og:url" content="https://solopovdmitriy.github.io/DietForWeek/">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+
+   
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -41,6 +50,14 @@
     </style>
 </head>
 <body>
+
+        <p>
+         <a href="https://solopovdmitriy.github.io/DietForWeek/"><img src="image/menu.png" alt="Дієта"></a>
+        </p>
+
+
+
+
     <div class="container">
         <h1>Молочно-рослинна дієта: Меню на тиждень</h1>
         <h2>Рекомендації</h2>
