--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Меню на тиждень</title>
     <meta property="og:title" content="Молочно-рослинна дієта: Меню на тиждень">
     <meta property="og:description" content="Детальне меню на тиждень із вказанням порцій, ваги продуктів і загального списку для закупівлі. Збалансоване харчування для вашого здоров'я.">
-    <meta property="og:image" content="https://kor.ill.in.ua/m/1260x900/675790.jpg">
+    <meta property="og:image" content="https://solopovdmitriy.github.io/DietForWeek/image/menu.png">
     <meta property="og:url" content="https://solopovdmitriy.github.io/DietForWeek/">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
@@ -49,6 +49,8 @@
         }
     </style>
 </head>
+
+
 <body>
 
         <p>
