--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="uk">
 <head>
    
-    <meta charset="UTF-8">
+    <!-- <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Меню на тиждень</title>
     <meta property="og:title" content="Молочно-рослинна дієта: Меню на тиждень">
@@ -10,8 +10,24 @@
     <meta property="og:image" content="https://solopovdmitriy.github.io/DietForWeek/image/menu.png">
     <meta property="og:url" content="https://solopovdmitriy.github.io/DietForWeek/">
     <meta property="og:type" content="website">
-    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:card" content="summary_large_image"> -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Poetry">
+    <meta property="og:description" content="Медичний вірш про подагру">
+    <meta property="og:image" content="https://beta.progalit-uros-magnus.online/site_images/consequences_kidney_stone.jpg">
 
+    <meta property="og:locale" content="ua_UA" />
+    <meta property="og:type" content="article" />
+
+   
+    <meta property="og:url" content="https://solopovdmitriy.github.io/Poem_gout" />
+    <meta property="og:site_name" content="solopovdmitriy" />
+   
+  
+    <meta property="og:image:width" content="663" />
+    <meta property="og:image:height" content="555" />
+    <meta property="og:image:type" content="image/jpg" />
    
     <style>
         body {
