--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Poetry">
     <meta property="og:description" content="Медичний вірш про подагру">
-    <meta property="og:image" content="https://beta.progalit-uros-magnus.online/site_images/consequences_kidney_stone.jpg">
+    <meta property="og:image" content="https://beta.progalit.com/site_images/consequences_kidney_stone.jpg">
 
     <meta property="og:locale" content="ua_UA" />
     <meta property="og:type" content="article" />
 
    
-    <meta property="og:url" content="https://solopovdmitriy.github.io/Poem_gout" />
+    <meta property="og:url" content="https://solopovdmitriy.github.io/DietForWeek/" />
     <meta property="og:site_name" content="solopovdmitriy" />
    
   
@@ -67,7 +67,7 @@
                     </tr>
                     <tr>
                         <td>П’ятниця</td>
-                        <td>Сир (100 г), мед (1 ч. л.).<br>Трав'яний чай.</td>
+                        <td> Кисло-молочний м'який Сир (100 г), мед (1 ч. л.).<br>Трав'яний чай.</td>
                         <td>Суп із рисом (70 г), овочі (150 г).<br>Пюре з картоплі (100 г).<br>Салат із зелені (50 г).<br>Узвар із яблук.</td>
                         <td>Овочеве рагу (200 г).<br>Тепле молоко.</td>
                     </tr>
